# browz

./: .gitignore  README.md  com.andrewanderson.browz.json  meson.build
data/: com.andrewanderson.browz.appdata.xml.in  com.andrewanderson.browz.desktop.in  com.andrewanderson.browz.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: browser_mappings.py  browz.in  main.py  meson.build  style.css  window.py
